Server and Client working now with files, incrementing now correctly.